@@ -59,6 +59,14 @@ has been discontinued.
 tooltip message popups, corresponding to mouse hovering with/without the
 CONTROL/COMMAND key pressed.
 
+* The following actions allow to navigate errors within the current
+document snapshot:
+
+  isabelle.first-error (CS+a)
+  isabelle-last-error (CS+z)
+  isabelle-next-error (CS+n)
+  isabelle-prev-error (CS+p)
+
 * Prover IDE startup is now much faster, because theory dependencies are
 no longer explored in advance. The overall session structure with its
 declarations of 'directories' is sufficient to locate theory files. Thus
